--- a/Project.csproj
+++ b/Project.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="Azure.Messaging.EventGrid" Version="4.18.0" />
     <PackageReference Include="Azure.Messaging.EventHubs" Version="5.9.3" />
     <PackageReference Include="Azure.Messaging.EventHubs.Processor" Version="5.9.3" />
+    <PackageReference Include="Azure.Security.KeyVault.Certificates" Version="4.5.1" />
+    <PackageReference Include="Azure.Security.KeyVault.Keys" Version="4.5.0" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.18.0" />
     <PackageReference Include="Azure.Storage.Queues" Version="12.16.0" />
